--- a/src/minio.html
+++ b/src/minio.html
@@ -27,9 +27,9 @@
       console.log(formData);
 
       axios({
-        url: "http://localhost:3000/api/v1/images/minio",    // 이미지 저장을 위해 back서버와 통신
+        url: "http://localhost:8080/api/v1/images/minio",    // 이미지 저장을 위해 back서버와 통신
         method: "POST",
-        headers: {'Content-Type': 'multipart/form-data'},   
+        headers: {'Content-Type': 'multipart/form-dWata'},   
         data: formData,
       }).then(res => {
         console.log(res.data.message);
