--- a/src/minio.html
+++ b/src/minio.html
@@ -27,7 +27,7 @@
       console.log(formData);
 
       axios({
-        url: "http://localhost:8080/api/v1/images/minio",    // 이미지 저장을 위해 back서버와 통신
+        url: "https://tripsketch.onrender.com/api/v1/images/minio",    // 이미지 저장을 위해 back서버와 통신
         method: "POST",
         headers: {'Content-Type': 'multipart/form-dWata'},   
         data: formData,
